force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Account__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the account that is related to the cart record.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carts as Account</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>