force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Action__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Action__c</fullName>
    <formula>HYPERLINK(&quot;/apex/Cart?cartId=&quot; &amp; Id, &quot;Pay Cart&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>