force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__BG_Payment_Batch__c.field-meta.xml
<CustomField>
    <fullName>BGBK__BG_Payment_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in the cashiering module to group payments.</description>
    <label>Payment Batch</label>
    <referenceTo>BGBK__Payment_Batch__c</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>