force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Contact__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the contact that is related to the cart record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Carts as Contact</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>