force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Process_DateTime__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Process_DateTime__c</fullName>
    <description>Transaction date and time.</description>
    <label>Process Date</label>
    <type>DateTime</type>
</CustomField>