force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Timeout_Date__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Timeout_Date__c</fullName>
    <label>Timeout Date</label>
    <type>DateTime</type>
</CustomField>