force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Total_Amount__c</fullName>
    <description>Total amount from all outstanding payable items in the cart.</description>
    <label>Total</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>