force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Type__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Type__c</fullName>
    <description>Type of Cart (Cart&apos;s owner): Account, Contact, or Cashier.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Cashier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>