force-app/main/default/objects/BGBK__Cart__c/validationRules/BGBK__Prevent_Locked_Cart_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Prevent_Locked_Cart_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!ISNEW(),
!ISCHANGED(BGBK__Timeout_Date__c),
!ISCHANGED(BGBK__Gateway_Response__c),
!ISCHANGED(BGBK__Gateway_Processing__c),
!ISBLANK(BGBK__Timeout_Date__c),
BGBK__Timeout_Date__c &gt;= NOW()
)</errorConditionFormula>
    <errorMessage>This cart is locked and cannot be modified. Please wait a few minutes for it to unlock and try again.</errorMessage>
</ValidationRule>