force-app/main/default/objects/BGBK__Cart__c/listViews/BGBK__All.listView-meta.xml
<ListView>
    <fullName>BGBK__All</fullName>
    <columns>NAME</columns>
    <columns>BGBK__Status__c</columns>
    <columns>BGBK__Contact__c</columns>
    <columns>BGBK__Account__c</columns>
    <columns>BGBK__Type__c</columns>
    <columns>BGBK__Total_Amount__c</columns>
    <columns>BGBK__Last_Payment_Amount__c</columns>
    <columns>BGBK__Process_DateTime__c</columns>
    <columns>BGBK__Action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>